--- a/html/Maintenance/MVP50T Engine Instrument Calibration.html
+++ b/html/Maintenance/MVP50T Engine Instrument Calibration.html
@@ -1,3 +1,41 @@
+
+<p>Calibration of the MVP-50T system is done with a generally similar process as compared to analog instruments.  The process is somewhat more complicated because it is not possible to remove individual instruments and then send them to a calibration shop.  All testing must therefore be performed with the instruments and devices in situ.</p>
+
+
+<p><b>Pressure Sensors</b></p>
+<p>Torque, oil pressure, and fuel pressure indications are provided by pressure transducers that are mounted on the forward portion of the firewall.</p>
+<p></p>
+
+
+<p><b>Tachometers</b></p>
+<p>Calibration of the NP and NG tachometers are complicated because it is difficult to provide a known good reference</p>
+
+<p><b>ITT</b></p>
+ITT should be checked with a type K thermocouple tester.  In the industry, these are commonly referred to as "Barfield" testers.  
+
+<p><b>Oil Temperature</b></p>
+
+<p><b>Fuel Flow</b></p>
+
+
+<p><b>Air Filter Indicator</b></p>
+
+<p><b>Beta Light</b></p>
+<p>The beta light is a discrete signal from the beta and prop governor switches, there is no calibration required but it is advisable to observe that the indicator is functioning properly during ground operations.</p>
+
+<p><b>Chip Detectors</b></p>
+
+<p><b>Fuel Filter Indicator</b></p>
+
+<p><b>Outside Air Temperature</b></p>
+The outside air temperature probe is located underneath the right hand wing.  To check this function, it is recommended that the probe is dipped into an ice bath
+
+<p><b>Amps</b></p>
+<p>Generator electrical current is measured using a shunt resistor which is mounted with the main relays.</p>
+<p>There is no need to calibrate this function unless there is a suspicion that it is providing erroneous information</p>
+<p>The shunt resistor is designed to produce a 50mV voltage drop when 300 amps of current flow through it.  To check that the shunt, measure the resitance between the screw terminals.  The resistance should be .16mΩ.</p>
+
+<p><b>G-Meter</b></p>
 <p>Aircraft that have the MVP-50T Primary Engine Monitor STC installed by Air Tractor (SA02135SE) may have a G-force sensor, labeled GS-3, not reading accurately. As of September 2016, a G-force calibration inspection requirement was been added to Air Tractor production. 
 </p>
 <p>The inaccuracy is evident because the G-force sensor’s reading is not either 0.9 or 1.0 when the airplane is stationary. To correct the inaccuracy, it will be necessary to perform a G-force sensor calibration procedure, to adjust the sensor’s Gain and Offset. If sensor calibration is required, refer to Service Letter #354.</p>
