--- a/html/Maintenance/Night Working Lights.html
+++ b/html/Maintenance/Night Working Lights.html
@@ -1,5 +1,8 @@
-<p>The wiring schematic for the night working lights is shown in Figure 42. The Night Working Lights combine the functions of the 600-watt landing lights (p/n Q4559) and the 250-watt turn lights (p/n 4553) for optimum visibility while operating at night. </p>
-
+<p>The wiring schematic for the night working lights is shown in <xref fileTarget="img_Fig_42.png" xrefType="link">Fig Cross Reference</xref>. The Night Working Lights combine the functions of the 600-watt landing lights (p/n Q4559) and the 250-watt turn lights (p/n 4553) for optimum visibility while operating at night. </p>
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_42.png">
+    <figcaption class="centerText">Wiring Schematic- Night Working Lights</figcaption>
+</figure>
 <p>The extension of the landing lights is individually controlled by the extend-and-retract switches located on the lower switch panel. These switches allow the landing lights to be stopped at any point in their extensions or retraction to provide the best replacement of lighting to suit the pilot. The landing lights can be turned ON or OFF by use of the MAIN switch to the right of the extend-and-retract switches on the lower panel. </p>
 
 <p>The turn-light switch is a push-on, push-off button switch located at the upper left of the control stick. When the landing-light main switch is ON and the turn-light switch is turned on, the turn-light selector switch atop the control stick is enabled. This switch has LEFT, RIGHT, and center OFF positions. When the turn-light selector switch is moved out of its center position, left or right, the wing-tip-mounted turn light is turned ON for the selected side while the landing lights are simultaneously turned OFF. Return of the turn-light switch to its center position restores the landing light to ON and the selected turn light to OFF. </p>
