--- a/html/Description/Flap Actuator.html
+++ b/html/Description/Flap Actuator.html
@@ -1,1 +1,5 @@
-<p>The flap actuator assembly is either an Air Tractor p/n 71112-1 or a Commercial Aircraft Products p/n C100168-4.  To determine which actuator is installed, check the size of the ball screw shaft with the actuator deflected. The C100168-4 actuator has a shaft diameter of approximately 9/16".  The 71112-1 actuator has a shaft diameter of approximately 1.0".  Details of the flap actuator are shown in Figure 26 (C100168-4 actuator shown, 71112-1 actuator similar).</p>
+<p>The flap actuator assembly is either an Air Tractor p/n 71112-1 or a Commercial Aircraft Products p/n C100168-4.  To determine which actuator is installed, check the size of the ball screw shaft with the actuator deflected. The C100168-4 actuator has a shaft diameter of approximately 9/16".  The 71112-1 actuator has a shaft diameter of approximately 1.0".  Details of the flap actuator are shown in <xref fileTarget="img_Fig_26.png" xrefType="link">Fig Cross Reference</xref> (C100168-4 actuator shown, 71112-1 actuator similar).</p>
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_26.png">
+    <figcaption class="centerText">Flap Actuator</figcaption>
+</figure>
