--- a/html/Maintenance/Horizontal Stabilizers.html
+++ b/html/Maintenance/Horizontal Stabilizers.html
@@ -1,11 +1,11 @@
 <p>
-    The details of the horizontal stabilizer are shown below. The horizontal stabilizers require very little
-    maintenance since they are all metal. They are attached to the fuselage frame with two AN5-7A bolts, which have a
+    The details of the horizontal stabilizer are shown below in <xref fileTarget="img_Fig_66.png" xrefType="link">Fig Cross Reference</xref>. The horizontal stabilizers require very little
+    maintenance as they are composed of metal. They are attached to the fuselage frame with two AN5-7A bolts, which have a
     washer under the head, and two under the nut. On 12-month inspections the gap cover should be removed from the
     stabilizer and the bolt condition and torque checked. At the same time inspect the fuselage fittings closely for
     cracks. Torque is 200 inch-pounds at the nut. The gap covers are attached with 90008-1 stainless self-tapping screws
-    which are Phillips truss head #4x1/4" long. A No. 39 hole is drilled for the screw installation. The S202VW rubber
-    channel is a Cessna part and is attached with 3-M 8001 Adhesive.
+    which are Phillips truss head #4x1/4" long. A No. 39 hole is drilled for the screw installation. The Cessna S202VW rubber
+    channel is attached with 3-M 8001 Adhesive.
 </p>
 
 <figure>
