--- a/html/Maintenance/Elevator Trim Tabs.html
+++ b/html/Maintenance/Elevator Trim Tabs.html
@@ -1,4 +1,4 @@
-<p>Details of the elevator trim tabs are shown below.  The elevator trim tabs are p/n 30600-1 L/H, 30600-2 R/H and attach to the elevators with a p/n 30610-1 hinge that bolts in the inboard rib with AN3-5A bolts and AN960-10 washers. </p>
+<p>Details of the elevator trim tabs are shown below in <xref fileTarget="img_Fig_69.png" xrefType="link">Fig Cross Reference</xref>.  The elevator trim tabs are p/n 30600-1 L/H, 30600-2 R/H and attach to the elevators with a p/n 30610-1 hinge that bolts in the inboard rib with AN3-5A bolts and AN960-10 washers. </p>
 
 <figure>
     <img class="imageCentered_5x3" src="img/img_Fig_69.png">
