--- a/html/Maintenance/Vertical Fin.html
+++ b/html/Maintenance/Vertical Fin.html
@@ -1,4 +1,4 @@
-<p>Details of the vertical fin are shown below.  The cantilever vertical fin is attached to the fuselage frame at the front spar location with two NAS1306-13 bolts and AN365-624 nuts. It has been found that these two bolts tend to loosen in service. No doubt buffeting from the propeller slipstream during run-up and stresses from turns tend to produce constant loads from side to side that tend to loosen the nuts. </p>
+<p>Details of the vertical fin are shown in <xref fileTarget="img_Fig_52.png" xrefType="link">Fig Cross Reference</xref>.  The cantilever vertical fin is attached to the fuselage frame at the front spar location with two NAS1306-13 bolts and AN365-624 nuts. It has been found that these two bolts tend to loosen in service. No doubt buffeting from the propeller slipstream during run-up and stresses from turns tend to produce constant loads from side to side that loosen the nuts. </p>
 
 <figure>
     <img class="imageCentered_3x5" src="img/img_Fig_52.png">
@@ -15,6 +15,6 @@
 
 <p>The Owners Manual may be used as a guide for bolt installation. Be aware that the AN bolt length dash numbers are not the same as the NAS bolt dash numbers for a given length.</p>
 
-<p>The vertical fin rear spar is drilled on installation where the attachment is made to top longeron. If a new fin is installed, make a drill template from the original fin rear spar in order to drill the four 3/16" holes for the attachment to the upper longeron. The template should be 2.44" wide and long enough to pick up the two lower attach bolts. The template should be made of either aluminum or steel, at least .063" thick. </p>
+<p>The vertical fin rear spar is drilled on installation where the attachment is made to the top longeron. If a new fin is installed, make a drill template from the original fin rear spar in order to drill the four 3/16" holes for the attachment to the upper longeron. The template should be 2.44" wide and long enough to pick up the two lower attach bolts. The template should be made of either aluminum or steel, at least .063" thick. </p>
 
 <p>Install the fin on the aircraft and install the bolts at the front and rear spar locations. Be sure the correct amount of shims is used between the fuselage frame and the rear spar.  The rear spar bolts have a torque of 60 inch-pounds at the nut. </p>
