--- a/html/Maintenance/Fuel Filter Cleaning.html
+++ b/html/Maintenance/Fuel Filter Cleaning.html
@@ -1,4 +1,4 @@
-<p>The firewall fuel filter is shown below. Should something get into the system, your aircraft is equipped with a fuel filter located on the firewall between the batteries. The filter element for this is a FRAM CS1133PL. The firewall filter element is inexpensive, and should be replaced at least every 100 hours. If you are using fuel from a source not equipped with a water separator, change the element every 50 hours as follows: </p>
+<p>The firewall fuel filter is shown below in FIG 46. Should something get into the system, your aircraft is equipped with a fuel filter located on the firewall between the batteries. The filter element for this is a FRAM CS1133PL. The firewall filter element is inexpensive, and should be replaced at least every 100 hours. If you are using fuel from a source not equipped with a water separator, change the element every 50 hours as follows: </p>
 
     <ol type="1">
         <li>Loosen the center nut of the top of the filter assembly.</li>
@@ -13,7 +13,7 @@
     
 <p>When the fuel filter bowl has been removed for cartridge inspection it must be remembered that the fuel lines from the engine fuel control to the header tank have been drained, and these lines will be air-locked if a start is attempted without first priming the lines with fuel. Use the electric boost pump for this. </p>
 
-<p>The engine also has a disposable fuel filter on the high pressure pump located at the 3 o'clock position on the accessory case. This element is an AN6235-3A. The filter should be changed anytime the firewall filter is found contaminated or every 300 hours. See the proper engine manual in INSTRUCTIONS FOR CONTINUED AIRWORHTINESS in Section 1 for details on removing and replacing this filter</p>
+<p>The engine also has a disposable fuel filter on the high pressure pump located at the 3 o'clock position on the accessory case. This element is an AN6235-3A. The filter should be changed anytime the firewall filter is found contaminated or every 300 hours. See the proper engine manual in <xref sectionTarget="1.0.2" prependLabel="Section"></xref> for details on removing and replacing this filter</p>
 
 <div class="boxCautionLarge">
     <p class="boxCautionLargeHeader">CAUTION</p>
